--- a/src/sass/theme/_understrap.scss
+++ b/src/sass/theme/_understrap.scss
@@ -2,7 +2,6 @@ body {
 	overflow-x: hidden; // Fix for Windows Chrome horizontal scrollbar.
 }
 
-
 // Some basic padding for all wrappers
 .wrapper {
 	padding: $grid-gutter-width 0;
@@ -165,10 +164,14 @@ a.skip-link {
 
 	@for $i from 2 through 9 {
 		.gallery-columns-#{$i} & {
-			max-width: floor( percentage( 1 / $i ) * 100 ) / 100;
+			max-width: floor(percentage(1 / $i) * 100) / 100;
 		}
 	}
 }
 .gallery-caption {
 	display: block;
+}
+
+h2.sr-only {
+	background-color: #ffffff;
 }
